--- a/themes/forty/static/elements.html
+++ b/themes/forty/static/elements.html
@@ -207,8 +207,24 @@ of interest
 													</ul>
 
 												<!-- Blockquote -->
-													<h3>Blockquote</h3>
-													<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote>
+													<h3>Overview of video games</h3>
+													<blockquote>
+Video games like any software are a set of programs
+working in synergy. The principle is to create a Man-Machine interaction via
+an input device (Joysticks, Keyboard, Mouse...). A visual reactive system
+allowing to make animations and simulations. They mainly use the
+processor (GPU) for the calculation of the coordinates and the display of the pixels on
+an output device (Screen).
+The idea of video games was born between the 1950s and 1970s with the beginning of the
+arcade terminals, games and consoles. This idea is the fruit of
+Ralph Baer, an American engineer from the company Loral Electronics who employed him to design
+to design "the best television in the world". [2]
+In May 1951, the first computer whose sole purpose is to allow playing a game
+game, in this case the game of Nim, is exposed by Nimrod in London.
+Today, video games are an important economic industry that counts
+more than 300,000 jobs, especially thanks to the development of consoles, computers
+and especially tablets and smartphones. This technological advance has allowed a rapid spread of
+of interactive programs.</blockquote>
 
 												<!-- Table -->
 													<h3>Table</h3>
