--- a/themes/forty/static/elements.html
+++ b/themes/forty/static/elements.html
@@ -530,7 +530,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; wrodriguezoma@mail.com</li><li>Design: <a href="https://html5up.net">Z~W~R</a></li>
 							</ul>
 						</div>
 					</footer>
